--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,11 +42,13 @@
 }
 
 .mobile-tab-bar {
+  border-radius: 0 0 var(--tab-bar-bottom-radius, 0) var(--tab-bar-bottom-radius, 0);
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   background-color: var(--app-background);
+  color: var(--app-text-color);
   box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
   z-index: 3;
   display: flex;
