--- a/src/app/components/titlebar/titlebar.component.scss
+++ b/src/app/components/titlebar/titlebar.component.scss
@@ -6,44 +6,12 @@
   background: var(--app-background);
   color: var(--app-text-color);
   padding: 4px var(--title-bar-padding);
-  border-radius: 8px 8px 0 0;
-
-  button {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding: 6px;
-    border-radius: 8px;
-    color: var(--button-text);
-
-    &:hover {
-      background: var(--button-hover);
-    }
-  }
+  border-radius: var(--title-bar-radius, 16px) var(--title-bar-radius, 16px) 0 0;
 
   .left-section{
     display: flex;
     align-items: center;
     gap: 10px;
-
-    .add-button {
-      background: var(--add-button-background);
-      color: var(--button-text);
-
-      &:hover {
-        background: var(--add-button-hover);
-      }
-    }
-
-    button {
-      &:hover {
-        background: var(--button-hover);
-      }
-      .logo {
-        width: 32px;
-        height: 32px; 
-      }
-    }
   }
 
   .right-section {
@@ -60,7 +28,7 @@
 .theme-selector {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  gap: 20px;
   padding: 10px;
 }
 .theme-button {
@@ -77,6 +45,7 @@
   padding-block-start: 2px;
   padding-inline-end: 6px;
   padding-inline-start: 6px;
+  transition: all 200ms ease-in-out;
 
   &:hover {
     border-color: var(--theme-border-hover);
@@ -91,6 +60,7 @@
     justify-content: center;
     align-items: center;
     margin: -8px;
+    color: var(--accent-color)
   }
 }
 .light {
@@ -110,5 +80,5 @@
 }
 
 .selected {
-  border-color: var(--selected-border) !important;
+  border-color: var(--accent-color) !important;
 }
