--- a/src/app/modals/export-modal/export-modal.component.html
+++ b/src/app/modals/export-modal/export-modal.component.html
@@ -1,11 +1,11 @@
 <div class="export-modal">
     <!-- 🔹 Modal Header -->
-    <div class="modal-header">
-        <button mat-icon-button>
+    <div class="modal-header" data-tauri-drag-region>
+        <button>
             <mat-icon svgIcon="question"></mat-icon>
         </button>
         <p>Export Settings</p>
-        <button mat-button (click)="close()">
+        <button (click)="close()">
             <mat-icon svgIcon="circle-xmark"></mat-icon>
         </button>
     </div>
@@ -20,10 +20,19 @@
             </mat-select>
         </mat-form-field>
 
+        <mat-form-field *ngIf="selectedOption === 'specific-remote'" appearance="fill" style="width: 100%;" @slideInOut>
+            <mat-label>Select Remote</mat-label>
+            <mat-select [(ngModel)]="selectedRemoteName" required>
+                <mat-option *ngFor="let remote of remotes" [value]="remote">
+                    {{ remote }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+
         <mat-form-field appearance="fill" style="width: 100%;">
             <mat-label>Save Export To</mat-label>
             <input matInput [value]="exportPath" placeholder="Select a folder..." readonly />
-            <button mat-icon-button matSuffix type="button" (click)="selectFolder()" matTooltip="Browse">
+            <button mat-icon-button matSuffix (click)="selectFolder()" matTooltip="Browse">
                 <mat-icon svgIcon="folder"></mat-icon>
             </button>
         </mat-form-field>
@@ -36,17 +45,17 @@
 
         <mat-form-field *ngIf="withPassword" appearance="fill" style="width: 100%;" @slideInOut>
             <mat-label>Password</mat-label>
-            <input matInput [(ngModel)]="password" type="password" />
+            <input matInput [(ngModel)]="password" type="password" required />
         </mat-form-field>
     </div>
 
     <!-- 🔘 Modal Actions -->
     <div class="button-group">
-        <span
-            matTooltip="Please select a folder to save the export"
+        <span matTooltip="Please select a folder to save the export"
             [matTooltipDisabled]="!(!exportPath || (withPassword && !password))">
-            <button class="primary" (click)="onExport()"
-                [disabled]="!exportPath || (withPassword && !password)">
+            <button mat-raised-button color="primary" (click)="onExport()" [disabled]="!exportPath ||
+                (withPassword && !password) ||
+                (selectedOption === 'specific-remote' && !selectedRemoteName)">
                 <mat-icon svgIcon="circle-check" class="icon-left"></mat-icon>
                 Export
             </button>
