--- a/src/app/modals/input-modal/input-modal.component.html
+++ b/src/app/modals/input-modal/input-modal.component.html
@@ -1,11 +1,11 @@
 <div class="input-modal">
   <!-- 🔹 Modal Header -->
-  <div class="modal-header">
-    <button mat-icon-button>
+  <div class="modal-header" data-tauri-drag-region>
+    <button>
       <mat-icon svgIcon="question"></mat-icon>
     </button>
     <p>{{ data.title }}</p>
-    <button mat-button (click)="close()">
+    <button (click)="close()">
       <mat-icon svgIcon="circle-xmark"></mat-icon>
     </button>
   </div>
@@ -14,23 +14,23 @@
     <p>{{ data.description }}</p>
     <ng-container *ngFor="let field of data.fields">
       <ng-container [ngSwitch]="field.type">
-    
+
         <!-- Regular input types -->
         <mat-form-field *ngSwitchCase="'text'" appearance="fill" style="width: 100%;">
           <mat-label>{{ field.label }}</mat-label>
           <input matInput [(ngModel)]="formData[field.name]" [required]="field.required" />
         </mat-form-field>
-    
+
         <mat-form-field *ngSwitchCase="'password'" appearance="fill" style="width: 100%;">
           <mat-label>{{ field.label }}</mat-label>
           <input matInput [(ngModel)]="formData[field.name]" type="password" [required]="field.required" />
         </mat-form-field>
-    
+
         <mat-form-field *ngSwitchCase="'number'" appearance="fill" style="width: 100%;">
           <mat-label>{{ field.label }}</mat-label>
           <input matInput type="number" [(ngModel)]="formData[field.name]" [required]="field.required" />
         </mat-form-field>
-    
+
         <mat-form-field *ngSwitchCase="'select'" appearance="fill" style="width: 100%;">
           <mat-label>{{ field.label }}</mat-label>
           <mat-select [(ngModel)]="formData[field.name]" [required]="field.required">
@@ -39,7 +39,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-    
+
         <!-- Folder select input -->
         <mat-form-field *ngSwitchCase="'folder'" appearance="fill" style="width: 100%;">
           <mat-label>{{ field.label }}</mat-label>
@@ -48,16 +48,14 @@
             <mat-icon svgIcon="folder"></mat-icon>
           </button>
         </mat-form-field>
-    
-      </ng-container>
-    </ng-container>    
-  </div>
 
-  <div mat-dialog-actions align="center">
-    <button mat-raised-button class="primary" (click)="confirm()" 
-    [disabled]="!isFormValid()">
-      <mat-icon svgIcon="circle-check"></mat-icon>
-      <span>Confirm</span>
-    </button>
+      </ng-container>
+    </ng-container>
+    <div mat-dialog-actions align="center">
+      <button mat-raised-button color="primary" (click)="confirm()" [disabled]="!isFormValid()">
+        <mat-icon svgIcon="circle-check"></mat-icon>
+        <span>Confirm</span>
+      </button>
+    </div>
   </div>
 </div>
